--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Actresses -- France -- Correspondence'
 - !lcc 'DC'
 - !lcsh 'Fusil, Louise, 1774-1848 -- Correspondence'
+- GITenberg
 title: Souvenirs d'une actrice (3/3)
 url: http://www.gutenberg.org/ebooks/26721
